--- a/package.json
+++ b/package.json
@@ -1,39 +1,49 @@
 {
-  "name": "avtoservice_bot",
-  "version": "1.0.0",
-  "main": "src/index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "node-fetch": "^3.2.10",
-    "node-telegram-bot-api": "^0.58.0",
-    "pg": "^8.8.0",
-    "pg-format": "^1.0.4",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@types/node-telegram-bot-api": "^0.57.1",
-    "@types/pg": "^8.6.5",
-    "@types/pg-format": "^1.0.2",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "eslint": "^8.23.0",
-    "eslint-import-resolver-typescript": "^3.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-tsdoc": "^0.2.16",
-    "husky": "^8.0.1",
-    "nodemon": "^2.0.19",
-    "prettier": "^2.7.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
-  },
-  "description": ""
+	"name": "avtoservice_bot",
+	"version": "1.0.0",
+	"main": "src/index.ts",
+	"scripts": {
+		"build": "tsc -p .",
+		"start": "node build/src/main.js",
+		"start:prod": "npm run build && node build/src/main.js",
+		"dev": "nodemon",
+		"fmt": "prettier \"src/**/*.ts\" \"**/*.json\" --write",
+		"fmt:check": "prettier \"src/**/*.ts\" \"**/*.json\" --check",
+		"lint": "eslint . --ext .ts",
+		"lint:fix": "eslint . --ext .ts --fix",
+		"ts:check-types": "tsc --noemit",
+		"pre:commit": "npm run fmt:check && npm run lint && npm run ts:check-types",
+		"pre:push": "npm run pre:commit && npm test",
+		"prepare": "husky install"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"node-fetch": "^3.2.10",
+		"node-telegram-bot-api": "^0.58.0",
+		"pg": "^8.8.0",
+		"pg-format": "^1.0.4",
+		"uuid": "^8.3.2"
+	},
+	"devDependencies": {
+		"@types/node-telegram-bot-api": "^0.57.1",
+		"@types/pg": "^8.6.5",
+		"@types/pg-format": "^1.0.2",
+		"@types/uuid": "^8.3.4",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"eslint": "^8.23.0",
+		"eslint-import-resolver-typescript": "^3.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-tsdoc": "^0.2.16",
+		"husky": "^8.0.1",
+		"nodemon": "^2.0.19",
+		"prettier": "^2.7.1",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.8.2"
+	},
+	"description": ""
 }
